@@ -20,8 +20,8 @@
 #include <psapi.h>
 #endif // _WIN
 
-#define RESTORE_VERSION_MIN 320
-#define RESTORE_VERSION_CUR 330
+#define RESTORE_VERSION_MIN 340
+#define RESTORE_VERSION_CUR 340
 
 int cycle_restore (hashcat_ctx_t *hashcat_ctx);
 
