@@ -1268,6 +1268,7 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
   logfile_ctx_t        *logfile_ctx        = hashcat_ctx->logfile_ctx;
   outcheck_ctx_t       *outcheck_ctx       = hashcat_ctx->outcheck_ctx;
   outfile_ctx_t        *outfile_ctx        = hashcat_ctx->outfile_ctx;
+  pidfile_ctx_t        *pidfile_ctx        = hashcat_ctx->pidfile_ctx;
   potfile_ctx_t        *potfile_ctx        = hashcat_ctx->potfile_ctx;
   user_options_extra_t *user_options_extra = hashcat_ctx->user_options_extra;
   user_options_t       *user_options       = hashcat_ctx->user_options;
@@ -1548,6 +1549,18 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
 
         return -1;
       }
+    }
+  }
+
+  // pidfile
+
+  if (hc_path_exist (pidfile_ctx->filename) == true)
+  {
+    if (hc_path_write (pidfile_ctx->filename) == false)
+    {
+      event_log_error (hashcat_ctx, "%s: %m", pidfile_ctx->filename);
+
+      return -1;
     }
   }
 
