@@ -40,6 +40,7 @@
 - Events: Improved the maximum event message handling. event_log () will now also internally make sure that the message is properly terminated
 - Files: Do several file and folder checks on startup rather than when they are actually used to avoid related error after eventual intense operations
 - Helper: Added functions to check existence, type, read- and write-permissions and rewrite sources to use them instead of stat()
+- Sessions: Move out handling of multiple instance from restore file into separate pidfile
 
 * changes v3.20 -> v3.30:
 
